<resources>
    <string name="app_name">LifeVault</string>
    <string name="loginIDLabel">Login ID:</string>
    <string name="passwordLabel">Password:</string>
    <string name="loginIDHint">login ID</string>
    <string name="NewAccountBtn">New Account</string>
    <string name="LoginBtn">Log In</string>
    <string name="forgotPasswordBtn">Forgot Password</string>
    <string name="emergencyRecoveryBtn">Emergency Recovery</string>
    <string name="settingsLabel">Settings</string>
    <string name="changePasswordBtn">Change Password</string>
    <string name="setTimeoutBtn">Set Timeout</string>
    <string name="setEmergencyRecoveryBtn">Set Emergency \n Recovery Email</string>
    <string name="newAccountCreationTitle">New Account Creation</string>
    <string name="confirmPWLabel">Confirm password:</string>
    <string name="emailLabel">Email address:</string>
    <string name="rEmailLabel">Recovery Email:</string>
    <string name="createAccountBtn">Create Account</string>
    <string name="cancelBtn">Cancel</string>
    <string name="addBtn">Add</string>
    <string name="emailHint">email address</string>
    <string name="passwordHint">password</string>
    <string name="confirmHint">confirm password</string>
    <string name="addNewNote">Add New Note</string>
    <string name="logOut">Log Out</string>
    <string name="settings">Settings</string>
    <string name="newEntryNameHint">Title</string>
    <string name="targetTextHint">text to be encrypted</string>
    <string name="newNoteTitle">Add a new entry</string>
    <string name="notesLabel">Notes:</string>
    <string name="editEntry">Edit note</string>
    <string name="deleteBtn">Delete</string>
    <string name="timeoutHint">timeout duration</string>
    <string name="recoveryEmail">recovery email</string>
    <string name="theme">Theme:</string>
    <string name="dark">dark</string>
    <string name="light">light</string>


</resources>
